syntax = "proto3";

package Contracts.Protos.Dto.Request;
option csharp_namespace = "TiendaServicios.Api.Autor.Contracts.Protos.Dto.Request";

message AddAutorRequest {
	 string AutorLibroGuid = 1;
}
