syntax = "proto3";

package Protos.Models;
option csharp_namespace = "TiendaServicios.Contracts.Protos.Models";

import "google/protobuf/timestamp.proto";

message GradoAcademicoModel {
    int32 GradoAcademicooId = 1;
    string Nombre = 2;
    string CentroAcademico = 3;
    google.protobuf.Timestamp FechaGrado = 4;
    int32 AutorLibroId = 5;
    string GradoAcademicoGuid = 6;
}
